# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  lint.yml
page_analyzer/: app.py  checks_repo.py  db.py  page_check.py  urls_repo.py
page_analyzer/templates/: index.html
page_analyzer/templates/layouts/: application.html
page_analyzer/templates/urls/: index.html  show.html
tests/: conftest.py  test_app.py  test_checks_repo.py  test_page_check.py  test_urls_repo.py  test_validators.py
